@@ -1,6 +1,13 @@
 Changelog
 =========
 
+TBD
+-------------
+
+(to be released)
+
+* Output all unicode for terminaltables, add unit test
+
 Version 1.0.0
 -------------
 
